tests/type_errors/sort_bools.nos
# expect_error: does not implement Ord
# Sorting bools should fail at compile time
main() = [true, false, true].sort()
